overflow issue

--- a/netmanager/src/assets/css/chart-container.css
+++ b/netmanager/src/assets/css/chart-container.css
@@ -52,7 +52,7 @@
 .chart-body {
   width: 100%;
   height: 80%;
-  overflow-y: auto;
+  overflow: hidden;
   position: relative;
   padding: 10px 20px 0 0;
 }
